--- a/AutoMall/ViewControllers/Mall/SettlementCell.xib
+++ b/AutoMall/ViewControllers/Mall/SettlementCell.xib
@@ -1,32 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="60" id="KGk-i7-Jjw" customClass="SettlementCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="settlementCell" rowHeight="60" id="KGk-i7-Jjw" customClass="SettlementCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="59.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="衬衫" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fag-Wj-k66">
-                        <rect key="frame" x="20" y="10" width="29" height="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="衬衫" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fag-Wj-k66">
+                        <rect key="frame" x="28" y="10" width="158" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥：100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ATp-Zl-ahb">
-                        <rect key="frame" x="20" y="33" width="52.5" height="17"/>
+                        <rect key="frame" x="28" y="33" width="52.5" height="17"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="17" id="rqt-Lh-Qwu"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.91764705879999997" green="0.12941176469999999" blue="0.1764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
@@ -59,9 +62,11 @@
                     </button>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="trailing" secondItem="fag-Wj-k66" secondAttribute="trailing" constant="134" id="3QM-Il-smq"/>
                     <constraint firstItem="ORV-1F-sba" firstAttribute="width" secondItem="fWo-NW-L5P" secondAttribute="width" id="6pM-Ge-JqL"/>
                     <constraint firstItem="Uds-sv-RbJ" firstAttribute="centerY" secondItem="fWo-NW-L5P" secondAttribute="centerY" id="B4Z-fd-qFx"/>
                     <constraint firstItem="fWo-NW-L5P" firstAttribute="leading" secondItem="Uds-sv-RbJ" secondAttribute="trailing" constant="-18" id="EoS-6L-IuX"/>
+                    <constraint firstItem="ATp-Zl-ahb" firstAttribute="top" secondItem="fag-Wj-k66" secondAttribute="bottom" constant="6" id="H0w-U5-nsX"/>
                     <constraint firstItem="Uds-sv-RbJ" firstAttribute="height" secondItem="fWo-NW-L5P" secondAttribute="height" id="NkN-Ev-Oob"/>
                     <constraint firstAttribute="bottom" secondItem="ATp-Zl-ahb" secondAttribute="bottom" constant="10" id="Qg0-uu-crJ"/>
                     <constraint firstItem="fag-Wj-k66" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="Z7N-0W-UKS"/>
