--- a/AutoMall/ViewControllers/Upkeep/AutoCheckGroupCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/AutoCheckGroupCell.xib
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="autoCheckGroupCell" rowHeight="138" id="KGk-i7-Jjw" customClass="AutoCheckGroupCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="138"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="autoCheckGroupCell" rowHeight="98" id="KGk-i7-Jjw" customClass="AutoCheckGroupCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="98"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="138"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="97.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="左上" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oVb-aE-TXO">
-                        <rect key="frame" x="16" y="2" width="31" height="30"/>
+                        <rect key="frame" x="16" y="10" width="31" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="4oa-pe-Ja5"/>
                         </constraints>
@@ -28,51 +28,50 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8mQ-WH-vvE">
-                        <rect key="frame" x="8" y="48" width="304" height="35"/>
+                        <rect key="frame" x="8" y="56" width="304" height="35"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="35" id="UGO-bT-PLM"/>
                         </constraints>
                     </view>
                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qzs-rM-M3Q">
-                        <rect key="frame" x="16" y="91" width="240" height="40"/>
+                        <rect key="frame" x="55" y="5" width="209" height="40"/>
                         <constraints>
-                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="240" id="SUf-N6-QlB"/>
                             <constraint firstAttribute="height" constant="40" id="tMq-cu-Jcy"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <inset key="titleEdgeInsets" minX="80" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        <inset key="titleEdgeInsets" minX="45" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <state key="normal">
                             <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
+                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="结果&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qdq-cb-WLS">
+                        <rect key="frame" x="55" y="16" width="72" height="18"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="72" id="waK-mM-bNU"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u80-wu-KtR">
-                        <rect key="frame" x="272" y="91" width="40" height="40"/>
+                        <rect key="frame" x="272" y="5" width="40" height="40"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="IKs-mZ-TOI"/>
                             <constraint firstAttribute="width" constant="40" id="ggA-Dz-hsB"/>
                         </constraints>
                         <state key="normal" image="photoBtn"/>
                     </button>
-                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="检查结果&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qdq-cb-WLS">
-                        <rect key="frame" x="16" y="102" width="72" height="18"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="72" id="E79-MY-w6f"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="oVb-aE-TXO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="0Yf-Nt-YB9"/>
                     <constraint firstAttribute="trailing" secondItem="8mQ-WH-vvE" secondAttribute="trailing" constant="8" id="3YU-bl-sbm"/>
-                    <constraint firstAttribute="trailing" secondItem="u80-wu-KtR" secondAttribute="trailing" constant="8" id="769-xz-yd8"/>
-                    <constraint firstItem="Qdq-cb-WLS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="IVA-AP-FqV"/>
-                    <constraint firstItem="u80-wu-KtR" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Qzs-rM-M3Q" secondAttribute="trailing" constant="10" id="QZC-LR-Rdl"/>
-                    <constraint firstItem="Qzs-rM-M3Q" firstAttribute="top" secondItem="8mQ-WH-vvE" secondAttribute="bottom" constant="8" id="bYp-zc-b6r"/>
+                    <constraint firstItem="Qzs-rM-M3Q" firstAttribute="leading" secondItem="oVb-aE-TXO" secondAttribute="trailing" constant="8" id="Amc-jU-RfA"/>
+                    <constraint firstAttribute="trailing" secondItem="u80-wu-KtR" secondAttribute="trailing" constant="8" id="CUa-nz-RaN"/>
+                    <constraint firstItem="u80-wu-KtR" firstAttribute="leading" secondItem="Qzs-rM-M3Q" secondAttribute="trailing" constant="8" id="QZC-LR-Rdl"/>
+                    <constraint firstItem="oVb-aE-TXO" firstAttribute="centerY" secondItem="u80-wu-KtR" secondAttribute="centerY" id="Ww6-tQ-QiH"/>
                     <constraint firstItem="Qdq-cb-WLS" firstAttribute="centerY" secondItem="Qzs-rM-M3Q" secondAttribute="centerY" id="cLx-tq-MhY"/>
-                    <constraint firstItem="Qzs-rM-M3Q" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="hgs-jP-woz"/>
-                    <constraint firstItem="oVb-aE-TXO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="s3U-1j-ONK"/>
+                    <constraint firstItem="u80-wu-KtR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="gir-cf-oMT"/>
+                    <constraint firstItem="Qdq-cb-WLS" firstAttribute="leading" secondItem="oVb-aE-TXO" secondAttribute="trailing" constant="8" id="htS-Mz-OSB"/>
                     <constraint firstItem="8mQ-WH-vvE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="t0s-KQ-hWn"/>
                     <constraint firstItem="u80-wu-KtR" firstAttribute="centerY" secondItem="Qzs-rM-M3Q" secondAttribute="centerY" id="tFI-Pf-m58"/>
                     <constraint firstItem="8mQ-WH-vvE" firstAttribute="top" secondItem="oVb-aE-TXO" secondAttribute="bottom" constant="16" id="xNL-rd-GJZ"/>
@@ -85,7 +84,7 @@
                 <outlet property="resultL" destination="Qdq-cb-WLS" id="cYz-oi-zl0"/>
                 <outlet property="segBgView" destination="8mQ-WH-vvE" id="zlG-cp-8Z0"/>
             </connections>
-            <point key="canvasLocation" x="-892" y="-40"/>
+            <point key="canvasLocation" x="-892" y="-60"/>
         </tableViewCell>
     </objects>
     <resources>
