--- a/AutoMall/ViewControllers/Upkeep/AutoCheckMultiCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/AutoCheckMultiCell.xib
@@ -11,24 +11,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="autoCheckMultiCell" rowHeight="138" id="KGk-i7-Jjw" customClass="AutoCheckMultiCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="137"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="autoCheckMultiCell" rowHeight="98" id="KGk-i7-Jjw" customClass="AutoCheckMultiCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="97"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="136.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="96.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CSA-D1-ZUd">
-                        <rect key="frame" x="8" y="2" width="304" height="30"/>
+                        <rect key="frame" x="74.5" y="7" width="100" height="30"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="检查内容：" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0cH-Jk-r5g">
-                                <rect key="frame" x="8" y="6" width="76.5" height="18"/>
-                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
-                                <color key="textColor" red="0.61176470589999998" green="0.61568627450000002" blue="0.61960784310000006" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="冰点" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QZf-nm-QRn">
-                                <rect key="frame" x="92.5" y="6.5" width="31" height="18"/>
+                                <rect key="frame" x="5" y="6.5" width="31" height="18"/>
                                 <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -36,24 +30,22 @@
                         </subviews>
                         <color key="backgroundColor" red="0.95686274510000002" green="0.96078431369999995" blue="0.96470588239999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="0cH-Jk-r5g" firstAttribute="leading" secondItem="CSA-D1-ZUd" secondAttribute="leading" constant="8" id="08Y-h5-jVz"/>
-                            <constraint firstItem="QZf-nm-QRn" firstAttribute="leading" secondItem="0cH-Jk-r5g" secondAttribute="trailing" constant="8" id="AJX-Ze-VNF"/>
-                            <constraint firstItem="0cH-Jk-r5g" firstAttribute="centerY" secondItem="CSA-D1-ZUd" secondAttribute="centerY" id="uY4-XF-zML"/>
+                            <constraint firstItem="QZf-nm-QRn" firstAttribute="centerY" secondItem="CSA-D1-ZUd" secondAttribute="centerY" id="A3v-mk-8A8"/>
+                            <constraint firstItem="QZf-nm-QRn" firstAttribute="leading" secondItem="CSA-D1-ZUd" secondAttribute="leading" constant="5" id="aAh-pj-kmR"/>
+                            <constraint firstAttribute="width" constant="100" id="jcm-XN-dtI"/>
                             <constraint firstAttribute="height" constant="30" id="uoc-EU-crZ"/>
-                            <constraint firstItem="QZf-nm-QRn" firstAttribute="centerY" secondItem="CSA-D1-ZUd" secondAttribute="centerY" id="ylw-Lv-6YY"/>
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2iA-28-E4i">
-                        <rect key="frame" x="8" y="48" width="304" height="35"/>
+                        <rect key="frame" x="8" y="52" width="304" height="35"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="35" id="NKG-mu-HI2"/>
                         </constraints>
                     </view>
                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HxV-Rp-wNd">
-                        <rect key="frame" x="16" y="91" width="240" height="40"/>
+                        <rect key="frame" x="179.5" y="2" width="90.5" height="40"/>
                         <constraints>
-                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="240" id="jq0-Mt-ckS"/>
-                            <constraint firstAttribute="height" constant="40" id="qPn-l0-Qu4"/>
+                            <constraint firstAttribute="height" constant="40" id="BRg-X3-qKI"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <inset key="titleEdgeInsets" minX="45" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -61,16 +53,8 @@
                             <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6nq-xE-qpG">
-                        <rect key="frame" x="272" y="91" width="40" height="40"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="40" id="1Ns-FZ-4YB"/>
-                            <constraint firstAttribute="width" constant="40" id="wgK-2k-pDs"/>
-                        </constraints>
-                        <state key="normal" image="photoBtn"/>
-                    </button>
                     <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="结果&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QwR-q1-eEa">
-                        <rect key="frame" x="16" y="102.5" width="72" height="18"/>
+                        <rect key="frame" x="179.5" y="13" width="72" height="18"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="72" id="v0V-9q-I5v"/>
                         </constraints>
@@ -78,31 +62,50 @@
                         <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6nq-xE-qpG">
+                        <rect key="frame" x="272" y="2" width="40" height="40"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="40" id="1Ns-FZ-4YB"/>
+                            <constraint firstAttribute="width" constant="40" id="wgK-2k-pDs"/>
+                        </constraints>
+                        <state key="normal" image="photoBtn"/>
+                    </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="挡风玻璃" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7PY-QI-k0G">
+                        <rect key="frame" x="8" y="12" width="61.5" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="MsS-7T-Ohc"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="2iA-28-E4i" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="0h0-Jj-l46"/>
-                    <constraint firstItem="CSA-D1-ZUd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="3bi-db-7MJ"/>
-                    <constraint firstItem="QwR-q1-eEa" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="4Qb-8P-OXU"/>
-                    <constraint firstItem="HxV-Rp-wNd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="4RG-Ld-t8Z"/>
+                    <constraint firstItem="CSA-D1-ZUd" firstAttribute="centerY" secondItem="7PY-QI-k0G" secondAttribute="centerY" id="15e-Hh-F9L"/>
+                    <constraint firstItem="CSA-D1-ZUd" firstAttribute="leading" secondItem="7PY-QI-k0G" secondAttribute="trailing" constant="5" id="1cc-1b-jqu"/>
+                    <constraint firstItem="HxV-Rp-wNd" firstAttribute="leading" secondItem="CSA-D1-ZUd" secondAttribute="trailing" constant="5" id="30l-Bc-rGs"/>
+                    <constraint firstItem="HxV-Rp-wNd" firstAttribute="centerY" secondItem="7PY-QI-k0G" secondAttribute="centerY" id="6pU-Hi-eft"/>
+                    <constraint firstItem="QwR-q1-eEa" firstAttribute="leading" secondItem="CSA-D1-ZUd" secondAttribute="trailing" constant="5" id="Btc-CH-LaB"/>
+                    <constraint firstItem="6nq-xE-qpG" firstAttribute="leading" secondItem="HxV-Rp-wNd" secondAttribute="trailing" constant="2" id="J4M-SH-Jzm"/>
                     <constraint firstAttribute="trailing" secondItem="2iA-28-E4i" secondAttribute="trailing" constant="8" id="KXi-0c-mrG"/>
-                    <constraint firstAttribute="trailing" secondItem="CSA-D1-ZUd" secondAttribute="trailing" constant="8" id="N14-CF-NY3"/>
-                    <constraint firstItem="QwR-q1-eEa" firstAttribute="centerY" secondItem="HxV-Rp-wNd" secondAttribute="centerY" id="Y29-0B-LJV"/>
-                    <constraint firstItem="2iA-28-E4i" firstAttribute="top" secondItem="CSA-D1-ZUd" secondAttribute="bottom" constant="16" id="dHB-F5-xEZ"/>
-                    <constraint firstItem="CSA-D1-ZUd" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="2" id="eDX-4C-hW9"/>
-                    <constraint firstAttribute="trailing" secondItem="6nq-xE-qpG" secondAttribute="trailing" constant="8" id="mka-Xb-BJb"/>
-                    <constraint firstItem="HxV-Rp-wNd" firstAttribute="top" secondItem="2iA-28-E4i" secondAttribute="bottom" constant="8" id="sz0-oZ-SPc"/>
-                    <constraint firstItem="6nq-xE-qpG" firstAttribute="centerY" secondItem="HxV-Rp-wNd" secondAttribute="centerY" id="xia-Of-9wD"/>
-                    <constraint firstItem="6nq-xE-qpG" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="HxV-Rp-wNd" secondAttribute="trailing" constant="10" id="ydh-Ze-tot"/>
+                    <constraint firstItem="7PY-QI-k0G" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="Nyg-3m-WHd"/>
+                    <constraint firstItem="2iA-28-E4i" firstAttribute="top" secondItem="HxV-Rp-wNd" secondAttribute="bottom" constant="10" id="WSh-fi-dH5"/>
+                    <constraint firstItem="6nq-xE-qpG" firstAttribute="centerY" secondItem="7PY-QI-k0G" secondAttribute="centerY" id="WUK-l5-lb4"/>
+                    <constraint firstAttribute="trailing" secondItem="6nq-xE-qpG" secondAttribute="trailing" constant="8" id="gKf-pb-cqz"/>
+                    <constraint firstItem="QwR-q1-eEa" firstAttribute="centerY" secondItem="7PY-QI-k0G" secondAttribute="centerY" id="rhy-hM-Iq7"/>
+                    <constraint firstItem="7PY-QI-k0G" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="yTZ-fZ-ACU"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="checkResultBtn" destination="HxV-Rp-wNd" id="ABx-7a-gEO"/>
                 <outlet property="contentL" destination="QZf-nm-QRn" id="qwh-L3-y4r"/>
+                <outlet property="nameL" destination="7PY-QI-k0G" id="bIk-uh-EL9"/>
                 <outlet property="photoBtn" destination="6nq-xE-qpG" id="1Ly-NH-KMv"/>
                 <outlet property="resultL" destination="QwR-q1-eEa" id="c5g-1m-vrR"/>
                 <outlet property="segBgView" destination="2iA-28-E4i" id="9xA-Um-9qx"/>
             </connections>
-            <point key="canvasLocation" x="-562" y="9"/>
+            <point key="canvasLocation" x="-752" y="-38.5"/>
         </tableViewCell>
     </objects>
     <resources>
