--- a/AutoMall/ViewControllers/Upkeep/AutoCheckGroupCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/AutoCheckGroupCell.xib
@@ -11,15 +11,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="autoCheckGroupCell" rowHeight="98" id="KGk-i7-Jjw" customClass="AutoCheckGroupCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="98"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="autoCheckGroupCell" rowHeight="85" id="KGk-i7-Jjw" customClass="AutoCheckGroupCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="85"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="97.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="84.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="左上" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oVb-aE-TXO">
-                        <rect key="frame" x="16" y="10" width="31" height="30"/>
+                        <rect key="frame" x="16" y="5" width="31" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="4oa-pe-Ja5"/>
                         </constraints>
@@ -28,13 +28,13 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8mQ-WH-vvE">
-                        <rect key="frame" x="8" y="56" width="304" height="35"/>
+                        <rect key="frame" x="8" y="40" width="304" height="35"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="35" id="UGO-bT-PLM"/>
                         </constraints>
                     </view>
                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qzs-rM-M3Q">
-                        <rect key="frame" x="55" y="5" width="209" height="40"/>
+                        <rect key="frame" x="55" y="0.0" width="209" height="40"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="tMq-cu-Jcy"/>
                         </constraints>
@@ -45,7 +45,7 @@
                         </state>
                     </button>
                     <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="结果&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qdq-cb-WLS">
-                        <rect key="frame" x="55" y="16" width="72" height="18"/>
+                        <rect key="frame" x="55" y="11" width="72" height="18"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="72" id="waK-mM-bNU"/>
                         </constraints>
@@ -54,7 +54,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u80-wu-KtR">
-                        <rect key="frame" x="272" y="5" width="40" height="40"/>
+                        <rect key="frame" x="272" y="0.0" width="40" height="40"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="IKs-mZ-TOI"/>
                             <constraint firstAttribute="width" constant="40" id="ggA-Dz-hsB"/>
@@ -70,11 +70,11 @@
                     <constraint firstItem="u80-wu-KtR" firstAttribute="leading" secondItem="Qzs-rM-M3Q" secondAttribute="trailing" constant="8" id="QZC-LR-Rdl"/>
                     <constraint firstItem="oVb-aE-TXO" firstAttribute="centerY" secondItem="u80-wu-KtR" secondAttribute="centerY" id="Ww6-tQ-QiH"/>
                     <constraint firstItem="Qdq-cb-WLS" firstAttribute="centerY" secondItem="Qzs-rM-M3Q" secondAttribute="centerY" id="cLx-tq-MhY"/>
-                    <constraint firstItem="u80-wu-KtR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="gir-cf-oMT"/>
+                    <constraint firstItem="u80-wu-KtR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="gir-cf-oMT"/>
                     <constraint firstItem="Qdq-cb-WLS" firstAttribute="leading" secondItem="oVb-aE-TXO" secondAttribute="trailing" constant="8" id="htS-Mz-OSB"/>
                     <constraint firstItem="8mQ-WH-vvE" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="t0s-KQ-hWn"/>
                     <constraint firstItem="u80-wu-KtR" firstAttribute="centerY" secondItem="Qzs-rM-M3Q" secondAttribute="centerY" id="tFI-Pf-m58"/>
-                    <constraint firstItem="8mQ-WH-vvE" firstAttribute="top" secondItem="oVb-aE-TXO" secondAttribute="bottom" constant="16" id="xNL-rd-GJZ"/>
+                    <constraint firstItem="8mQ-WH-vvE" firstAttribute="top" secondItem="oVb-aE-TXO" secondAttribute="bottom" constant="5" id="xNL-rd-GJZ"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -84,7 +84,7 @@
                 <outlet property="resultL" destination="Qdq-cb-WLS" id="cYz-oi-zl0"/>
                 <outlet property="segBgView" destination="8mQ-WH-vvE" id="zlG-cp-8Z0"/>
             </connections>
-            <point key="canvasLocation" x="-892" y="-60"/>
+            <point key="canvasLocation" x="-892" y="-66.5"/>
         </tableViewCell>
     </objects>
     <resources>
